--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="spotify-blue">
             <div class="layer1">
                 <div class="playlist-img">
-                    <img src="images/Image-blue.jpg" alt="Images">
+                    <img src="Images/Image-blue.jpg" alt="Images">
                     <button>
                         PREVIEW
                     </button>
