--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="spotify-brown">
             <div class="layer1">
                 <div class="playlist-img">
-                    <img src="images/image-brown.jpg" alt="Images">
+                    <img src="Images/image-brown.jpg" alt="Images">
                     <button>
                         PREVIEW
                     </button>
@@ -298,7 +298,7 @@
         <div class="spotify-blue">
             <div class="layer1">
                 <div class="playlist-img">
-                    <img src="images/image-blue.jpg" alt="Images">
+                    <img src="Images/image-blue.jpg" alt="Images">
                     <button>
                         PREVIEW
                     </button>
